<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/file_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="filepath"
        android:hint="@string/enter_full_path_to_file"
        android:inputType="textUri"
        android:text="@string/default_path"
        app:layout_constraintBottom_toTopOf="@id/button_load"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/load_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_view"
        app:layout_constraintTop_toBottomOf="@id/file_path" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toTopOf="@id/convert_quality"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_load" />

    <EditText
        android:id="@+id/convert_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="percent"
        android:hint="@string/enter_convert_quality"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/button_convert"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <Button
        android:id="@+id/button_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convert_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_quality" />

</androidx.constraintlayout.widget.ConstraintLayout>